--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,26 @@
-/main_test.py
-/test.xlsx
-/.vscode
-/__pycache__
+/server/server/main_test.py
+/server/test.xlsx
+/server/server/__pycache__
+
+
+/front/.DS_Store
+/front/node_modules
+/front/dist
+
+# local env files
+/front/.env.local
+/front/.env.*.local
+
+# Log files
+/front/npm-debug.log*
+/front/yarn-debug.log*
+/front/yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
