--- a/front/package.json
+++ b/front/package.json
@@ -8,8 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
+    "cache-loader": "^4.1.0",
     "core-js": "^3.4.4",
+    "element-ui": "^2.13.0",
+    "normalize.css": "^8.0.1",
+    "svg-sprite-loader": "^4.1.6",
     "vue": "^2.6.10",
+    "vue-loader": "^15.8.3",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   },
