--- a/front/package.json
+++ b/front/package.json
@@ -12,7 +12,9 @@
     "cache-loader": "^4.1.0",
     "core-js": "^3.4.4",
     "element-ui": "^2.13.0",
+    "js-cookie": "^2.2.1",
     "normalize.css": "^8.0.1",
+    "nprogress": "^0.2.0",
     "svg-sprite-loader": "^4.1.6",
     "vue": "^2.6.10",
     "vue-loader": "^15.8.3",
