--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.4.4",
     "element-ui": "^2.13.0",
     "js-cookie": "^2.2.1",
+    "js-file-download": "^0.4.10",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "svg-sprite-loader": "^4.1.6",
